--- a/AzureDiscoveryDay2019/labs/lab3/StreamEventSender/src/Sender/Sender.csproj
+++ b/AzureDiscoveryDay2019/labs/lab3/StreamEventSender/src/Sender/Sender.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,10 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.EventHubs" Version="2.2.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="pelazem.rndgen" Version="1.4.4" />
-    <PackageReference Include="pelazem.util" Version="2.4.0" />
+    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.11.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="pelazem.rndgen" Version="1.5.0" />
+    <PackageReference Include="pelazem.util" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
